--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,6 +13,6 @@ sonar.sources=.
 # =====================================================
 #   Properties that will be shared amongst all modules
 # =====================================================
-sonar.host.url=https://sonarcloud.com
+sonar.host.url=https://sonarcloud.io
 sonar.organization=usdot-jpo-sdc
 sonar.login=debbieneaeraconsulting@github
