--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,4 +15,4 @@ sonar.sources=.
 # =====================================================
 sonar.host.url=https://sonarcloud.io
 sonar.organization=usdot-jpo-sdc
-sonar.login=tony@neaeraconsulting.com
+sonar.login=debbie@neaeraconsulting.com
