--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,4 +15,4 @@ sonar.sources=.
 # =====================================================
 sonar.host.url=https://sonarcloud.io
 sonar.organization=usdot-jpo-sdc
-sonar.login=debbieneaeraconsulting@github
+sonar.login=afc0b4bae15bc49f4d668041d8886b6f87c065e2
