--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,5 @@ addons:
 script: 
     - python dataProcessor.py
     - coverage run dataProcessor.py
-    - coverage report -m
-    - coverage html
+    - coverage xml -i
     - sonar-scanner
