--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ addons:
 script: 
     - python dataProcessor.py
     - coverage erase
-    - coverage run dataProcessor.py
+    - coverage run dataProcessor-test
     - coverage xml -i
     - sonar-scanner
