--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,6 +10,7 @@ sonar.links.issue=https://github.com/usdot-jpo-sdc/sdc-dot-cvp-ingest/issues
 # Language
 sonar.language=py
 sonar.sources=.
+sonar.exclusions=coverage.xml
 sonar.python.coverage.reportPaths=coverage.xml
 # =====================================================
 #   Properties that will be shared amongst all modules
