generalize coverage report

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,8 +10,8 @@ sonar.links.issue=https://github.com/usdot-jpo-sdc/sdc-dot-cvp-ingest/issues
 # Language
 sonar.language=py
 sonar.sources=.
-sonar.exclusions=*coverage-*.xml, coverage.xml
-sonar.python.coverage.reportPaths=*coverage-*.xml, coverage.xml
+sonar.exclusions=*coverage*.xml
+sonar.python.coverage.reportPaths=*coverage*.xml
 # =====================================================
 #   Properties that will be shared amongst all modules
 # =====================================================
