--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,6 @@ script:
     - python dataProcessor.py
     - coverage erase
     - coverage run dataProcessor-tests.py
-    - coverage run utils-tests.py
+    - coverage run --append utils-tests.py
     - coverage xml -i
     - sonar-scanner
