change utils to pytest from unittest

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ addons:
 script: 
     - coverage erase
     - coverage run -m pytest dataProcessor-tests.py
-    - coverage run --append utils-tests.py
+    - coverage run --append -m pytest utils-tests.py
     - coverage xml -i
     - sonar-scanner
