--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,11 @@ install:
     - pip install utils
     - pip install moto
     - pip install coverage
+ branches:
+    only:
+     - master
+     - develop
+     - sdc-82
 addons:
     sonarcloud:
         organization: "usdot-jpo-sdc"
