--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,4 +17,4 @@ sonar.python.coverage.reportPaths=*coverage*.xml
 # =====================================================
 sonar.host.url=https://sonarcloud.io
 sonar.organization=usdot-jpo-sdc
-
+sonar.login=${SONAR_TOKEN}
