--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,4 @@ script:
     - coverage run -m pytest dataProcessor-tests.py
     - coverage run --append -m pytest utils-tests.py
     - coverage xml -i
+    - sonar-scanner
