--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
     - pip install utils
     - pip install moto
     - pip install coverage
+    - pip install pytest
 branches:
     only:
         - master
@@ -17,7 +18,6 @@ addons:
         organization: "usdot-jpo-sdc"
 script: 
     - coverage erase
-    - coverage run -m pytest dataProcessor-tests.py
-    - coverage run --append -m pytest utils-tests.py
+    - coverage run -m pytest tests/
     - coverage xml -i
     - sonar-scanner -X -D sonar.login=$SONAR_TOKEN
