remove data_processor.py from sonar.sources

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.links.scm=https://github.com/usdot-jpo-sdc/sdc-dot-cvp-ingest
 sonar.links.issue=https://github.com/usdot-jpo-sdc/sdc-dot-cvp-ingest/issues
 # Language
 sonar.language=py
-sonar.sources=data_processor.py, tests
+sonar.sources=tests
 sonar.exclusions=*coverage*.xml, **/__init__.py
 sonar.python.coverage.reportPaths=*coverage*.xml
 # =====================================================
