--- a/.coveragerc
+++ b/.coveragerc
@@ -1,35 +1,17 @@
 [run]
 branch = True
 include=
-    # Include the following source code folders
-    **/tests/**
-    dataProcessor.py
-    utils.py
+    *.py
+omit=
+    */tests/*
+    */__init__.py
+    */python*
+    */tests/*
 
 [report]
 exclude_lines=
     # Have to re-enable the standard pragma
     pragma: no cover
-
-    # Don't complain about missing debug-only code:
-    def __repr__
-    if self\.debug
-
-    # Don't complain if tests don't hit defensive assertion code:
-    raise AssertionError
-    raise NotImplementedError
-
-    # Don't complain if non-runnable code isn't run:
-    if 0:
-    if __name__ == .__main__.:
-
-omit=
-    # Ignore site-packages folder or python lib folders
-    **/site-packages/**
-
-    # Ignore specific source code folders
-    **/common/**
-    **/__init__.py
 
 [html]
 directory = html_coverage_reports
