--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,7 @@ python:
 before_install:
     - sudo rm -f /etc/boto.cfg
 install:
-    - pip install boto3
-    - pip install utils
-    - pip install moto
-    - pip install coverage
-    - pip install pytest
+    - pip install -r requirements.txt
 branches:
     only:
         - master
