Sonar token testing

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,4 +16,4 @@ sonar.python.coverage.reportPaths=*coverage*.xml
 # ======================================================
 sonar.host.url=https://sonarcloud.com
 sonar.organization=kbrpurchase1
-sonar.login=$SONAR_TOKEN
+sonar.login=58d512fb2a46eecd56a07c01e217a87ee93e3b2a
